final fixes before delivery

--- a/index.html
+++ b/index.html
@@ -114,6 +114,45 @@
             </button>
         </div>
     </section>
+    <!-- <section id="info-section">
+        <div id="sides tools">
+            <span>
+                <b>Estamos falando de uma caixa completa, ela conta com:</b>
+            </span>
+            <ul>
+                <li>Conexão via Bluetooth</li>
+                <li>entrada para pen-drive via USB</li>
+                <li>Entrada para cartão de memória SD</li>
+                <li>Karaokê</li>
+                <li>Rádio FM</li>
+                <li>Entrada para Guitarra ou Violão</li>
+                <li>Gravador</li>
+            </ul>
+        </div>
+        <div id="json-info">
+            <span id="Marca:"><b>Marca : </b></span>
+            <span id="Codigo EAN:"><b>Codigo EAN : </b></span>
+            <span id="Modelo:"><b>Modelo: </b></span>
+            <span id="Sac:"><b>SAC: </b></span>
+            <span id="Garantia:"><b>Garantia: </b></span>
+            <span id="FrequenciaDeRespostaDoMicrofone:"><b>Frequencia de resposta do microfone: </b></span>
+            <span id="Imperdancia:"><b>Imperdancia: </b></span>
+            <span id="EntradaAuxiliar:"><b>Entrada auxiliar: </b></span>
+            <span id="Potencia:"><b>Potência : </b></span>
+            <span id="Radio:"><b>Rádio: </b></span>
+            <span id="Sensibilidade:"><b>Sensibilidade: </b></span>
+            <span id="TamanhoDoSpeaker:"><b>Tamanho do Speaker: </b></span>
+            <span id="Bateria:"><b>Bateria: </b></span>
+            <span id="EntradaParaFone:"><b>Entrada Para Fone: </b></span>
+            <span id="ComposicaoDoMaterial:"><b>Composição do Material : </b></span>
+            <span id="FormatoDeAudiosCompativeis:"><b>Formato de áudios compativeis: </b></span>
+            <span id="Voltagem:"><b>Voltagem: </b></span>
+            <span id="CorPrincipal:"><b>Cor Principal: </b></span>
+            <span id="DimensoesDoProduto:"><b>Dimensoes do produto: </b></span>
+            <span id="PesoLiquido:"><b>Peso Líquido: </b></span>
+            <span id="DescricaoDoAudio:"><b>Descrição do áudio: </b></span>
+        </div>
+    </section> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
